cabal-version:      3.4
name:               hs-wlroots
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Well Typed
maintainer:         info@well-typed.com
category:           Development
build-type:         Simple
synopsis:           Test `hs-bindgen` on the `wlroots` library

common common
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16 && < 4.22
  default-language:
      GHC2021

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    , Generated.Wlroots
  autogen-modules:
  ghc-options:
  extra-libraries: wlroots
  build-depends:
    , c-expr-runtime
    , hs-bindgen-runtime

executable hs-wlroots-bin
  import:          common
  main-is:         Wlroots.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  extra-libraries: wlroots
  build-depends:
    , base >=4.7 && <5
    , hs-wlroots
