cabal-version:      3.4
name:               pcap
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Well Typed
maintainer:         info@well-typed.com
category:           Development
build-type:         Simple
synopsis:           Test `hs-bindgen` on the `pcap` library

common common
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16 && < 4.22
  default-language:
      GHC2021

library
  import:          common
  exposed-modules: Pcap
  hs-source-dirs:  src
  other-modules:   Generated.Pcap
  autogen-modules:
  ghc-options:
  build-depends:
      c-expr
    , hs-bindgen-runtime
