cabal-version:      3.0
name:               typing-c
version:            0.1.0.0
license:            BSD-3-Clause
author:             sheaf
maintainer:         sheaf
category:           System
build-type:         Simple

common common
  ghc-options:
    -Wall
  default-extensions:
    ImportQualifiedPost

library
  import:
    common
  hs-source-dirs:
    src
  exposed-modules:
    C.Type
    C.Typing.Arithmetic
    C.Typing.Arithmetic.TH
    C.Typing.Arithmetic.TyFams
    C.Typing.Clang
  build-depends:
    base >= 4 && < 5,
    fin,
    hs-bindgen-libclang,
    hs-bindgen-patterns,
    template-haskell >= 2 && < 3,
    temporary,
    text,
    vec
  default-language:
    Haskell2010

test-suite tests
  import:
    common
  hs-source-dirs:
    test
  main-is:
    Main.hs
  type:
    exitcode-stdio-1.0
  build-depends:
    base >= 4 && < 5,
    fin,
    hs-bindgen-libclang,
    hs-bindgen-patterns,
    template-haskell >= 2 && < 3,
    temporary,
    text,
    vec,
    typing-c
  default-language:
    Haskell2010
