cabal-version: 3.0
name:          literate-example
version:       0.1.0.0
license:       BSD-3-Clause
author:        Well-Typed LLP
maintainer:    info@well-typed.com
build-type:    Simple

common lang
  ghc-options:      -Wall
  default-language: GHC2021
  build-depends:    base >=4.18 && <5

executable literate-example
  import:             lang
  main-is:            Main.hs
  hs-source-dirs:     app
  include-dirs:       c-lib
  other-modules:      SimpleBindings
  other-extensions:   ForeignFunctionInterface
  build-depends:
    , hs-bindgen-runtime
    , primitive

  -- Use hs-bindgen-cli as the literate Haskell preprocessor
  -- The .lhs files contain command-line arguments for hs-bindgen
  ghc-options:        -pgmL hs-bindgen-cli -optL tool-support -optL literate
  build-tool-depends: hs-bindgen:hs-bindgen-cli
  extra-libraries:    c-lib
  extra-lib-dirs:     c-lib
