cabal-version:      3.0
name:               try-c2hs
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
build-type:         Simple

common lang
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16
  default-language:
      GHC2021

executable try-c2hs
  import:
      lang
  main-is:
      Main.hs
  other-modules:
      HsBindgenExample
  hs-source-dirs:
      app
  pkgconfig-depends:
      hs-bindgen-c-example
  build-tool-depends:
      c2hs:c2hs
