cabal-version: 3.0
name:          try-hsc2hs
version:       0.1.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Edsko de Vries
maintainer:    edsko@well-typed.com
build-type:    Simple

common lang
  ghc-options:      -Wall
  build-depends:    base >=4.16
  default-language: GHC2021

executable try-hsc2hs
  import:             lang
  hs-source-dirs:     app
  main-is:            Main.hs
  other-modules:      HsBindgenCExample
  pkgconfig-depends:  hs-bindgen-c-example
  build-tool-depends: hsc2hs:hsc2hs
