cabal-version:      3.0
name:               try-inline-c
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
build-type:         Simple

common lang
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16
    , containers >= 0.5 && < 0.8
  default-language:
     GHC2021

executable try-inline-c
  import:
     lang
  hs-source-dirs:
      app
  main-is:
      Main.hs
  other-modules:
      HsBindgenCExample
      Types
  build-depends:
      inline-c ^>= 0.9
  pkgconfig-depends:
      hs-bindgen-c-example

  if(flag(include-invalid))
    cpp-options:
      -DINCLUDE_INVALID

flag include-invalid
  description: Also include invalid declarations
  default: False
  manual: True